--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,40 @@
 aiofiles
 aiohttp
 asyncio
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
+lyricsgenius
 motor
 pillow
 psutil
-py-tgcalls==0.9.2
-pykeyboard
-pyrogram==2.0.106
+oldpyro
+telethon
+pyromod~=1.5
 python-dotenv
-pyyaml
+pyyaml==5.3.1
 requests
 speedtest-cli
 spotipy
 tgcrypto
-unidecode
-yt-dlp
 youtube-search
 youtube-search-python
+yt-dlp
+speedtest-cli
+pymongo[srv]
+pyromod~=1.5
+aiofiles
+beautifulsoup4
+py-tgcalls==0.9.7
+pykeyboard
+pyyaml
+speedtest-cli
+unidecode
+pySmartDL
+telegraph
+pytz
+gtts
+wget
+numpy
